[gd_scene load_steps=2 format=3 uid="uid://m4fwwvliygpi"]

[ext_resource type="Script" path="res://scripts/asteroid.gd" id="1_nirot"]

[node name="Asteroid" type="Area2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_nirot")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="BigCollision" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PackedVector2Array(-2, -31, 0, -28, 14, -31, 23, -27, 18, -17, 20, -12, 30, -8, 28, 1, 31, 5, 25, 27, 3, 21, -15, 31, -25, 31, -31, 17, -21, -2, -31, -7, -24, -23)

[node name="MediumCollision" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PackedVector2Array(-2, -15, 3, -1, 13, -4, 15, 9, 12, 15, -7, 15, -13, 9, -15, 3, -15, -10, -5, -15)

[node name="SmallCollision" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PackedVector2Array(-7, 0, 0, 7, 6, 4, 7, -3, 1, -2, -1, -7, -7, -5)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
